--- a/循环.md
+++ b/循环.md
@@ -351,12 +351,87 @@ cat phone.txt | sort -u | wc -l
 ```bash
 	#!/bin/env bash
 	
-	for ((i=1;i<=5;i++)){
-        $[$RANDOM%999+1]
-	}
+	file=/tmp/phone.txt
+	for ((i=1;i<=5;i++))
+	do
+		# 计算文件有多少行
+		line=`wc -l $file | cut -d' ' -f1`
+		# 幸运的行
+         luck_line=$[$RANDOM%999+1]
+         # 幸运行的电话号码
+         luck_phone=`head -luck_line $file|tail -1`
+         # 显示到屏幕
+         echo 139****${luck_phone:7:4}
+         # 保存号码
+         echo $luck_phone >> /tmp/luck.txt
+         # 删除幸运号码 (在file中搜索luck_phone, 然后d)
+         sed -i "/$luck_phone/d" $file
+	done
 ```
 
 
+
+#### 案例3: 
+
+创建5个随用,密码随机产生
+
+1. 循环5次创建用户
+2. 产生一个密码文件保存用户的随机密码
+3. 从密码文件中随机出去密码给用户
+
+```bash
+# 构建用户名的前缀
+[root@iz2zeaogswcq4v6abnhz7rz ~]# echo user0{1..5}:new-user$[RANDOM%9000+1000]#@~
+user01:new-user3960#@~ user02:new-user7059#@~ user03:new-user3532#@~ user04:new-user6179#@~ user05:new-user7172#@~
+
+# 处理一下, 将' ' 替换成'\n'让每一个名都单独占一行
+[root@iz2zeaogswcq4v6abnhz7rz ~]# echo user0{1..5}:new-user$[RANDOM%9000+1000]#@~ | tr ' ' '\n'
+user001:new-user6717#@~
+user002:new-user6078#@~
+user003:new-user4530#@~
+user004:new-user7793#@~
+user005:new-user8179#@~
+
+
+
+	#!/bin/env bash
+	# 先生成用户名, 保存进文件
+    echo user0{1..5}:new-user$[RANDOM%9000+1000]#@~ | tr ' ' '\n' >> user_pass.file
+    # 循环创建用户
+    for((i=1;i<=5;i++))
+    	do	
+    		#取出用户名
+    		user=`head -$i user_pass.file|tail -1 | cut -d: -f1"`
+    		pass=`head -$i user_pass.file|tail -1 | cut -d: -f2"`
+    		# 添加用户
+    		useradd $user
+   			# 设置密码
+   			echo $pass|passwd -stdin $user
+    	done
+```
+
+### shift 移位补充
+
+`shift -x` 的作用可以实现让脚本后面的参数向左移动x位
+
+```bash
+	#!/bin/env bash
+	sum=0
+	while [ $# -ne 0 ]
+	do
+		let sum=$sum+$1
+		shift
+	done
+	echo sum=$sum
+
+# 每次循环都让参数往前移动一位
+# 1 2 3
+# 2 3
+# 3
+# 结果就是1+2+3
+[root@iz2zeaogswcq4v6abnhz7rz ~]# ./shift.sh 1 2 3
+sum=6
+```
 
 
 
