--- a/补充命令.md
+++ b/补充命令.md
@@ -7,5 +7,19 @@ CentOS Linux release 7.3.1611 (Core)
 [root@iz2zeaogswcq4v6abnhz7rz changwu]# uname -r
 3.10.0-514.26.2.el7.x86_64
 
+
+# 屏蔽信号, (屏蔽快捷键发送给脚本程序的信号, 防止中断)
+trap '' 1 2 3 19
+
+# 信号回顾
+1) SIGHUP 重新加载配置
+2) SIGINT 键盘中断^C
+3) SIGOUT 键盘退出
+9) SIGKILL 强制退出
+15) SIGTERM 终止,正常退出
+18) SIGCONT 继续
+19) SIGSTOP 停止
+20) SIGTSTP 暂停^Z
+
 ```
 
